Issue 4 updated scss for table alignment

--- a/src/Startup/Rsp.IrasPortal/wwwroot/css/main.scss
+++ b/src/Startup/Rsp.IrasPortal/wwwroot/css/main.scss
@@ -860,6 +860,9 @@ button.govuk-pagination__item--current {
     font: inherit;
     padding: 0;
     text-underline-offset: .1578em;
+    display: flex; /* or inline-flex + width: 100% */
+    justify-content: flex-start;
+    text-align: left;
 
     &:hover {
         color: #003078;
